<resources>
    <string name="app_name">user_input</string>
    <string name="txtTitle">Parking Charges</string>
    <string name="txtHours">Number of Hours</string>
    <string name="btnCharge">Calculate Charges</string>
    <string name="prompt">Select Lot</string>
    <string-array name="txtGroup">
        <item>Lot A</item>
        <item>Lot B</item>
        <item>Lot C</item>
        <item>Lot D</item>
    </string-array>
    <string name="contDescription">Parking Meter</string>
</resources>